@@ -1,6 +1,7 @@
 v1.5.1 - TBD
 NEW:
   Added JEI info for Dimensional Flux.
+  Added an Auto Shutoff feature to the Plasma Generator.
 CHANGES:
   Explicitly unlock the recipes for Matter/Energy Converter and Plasma Generator when you
     pick up an Energy Crystal.
